--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.9.0",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
