--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.9.0",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "postcss": "^8.4.47",
